# btc-binary-prediction-markets-quant-engine

./: LICENSE  README.md  pyproject.toml
src/btc_binary_engine/: __init__.py  payoffs.py
tests/: test_payoffs.py
