[project]
name = "btc-binary-prediction-markets-quant-engine"
version = "0.1.0"
description = "BTC binary prediction markets quant engine for YES/NO pricing, implied probabilities, ML forecasting, and risk-managed backtesting."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
